--- a/web/index.html
+++ b/web/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>INBICST DJ</title>
+    <script src="static/wson.js"></script>
 </head>
 <body>
-    IT WORKS!
+    <a href="https://t.me/inbicst_dj_bot">Telegram dj bot:</a>
+    <current_music/>
+    
 </body>
 </html>
