--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,8 @@
     <title>INBICST DJ</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,400,700,900" rel="stylesheet">
     <link href="static/main.css" rel="stylesheet">
+    <script type="text/javascript" src="static/wson.js"></script>
+    <script type="text/javascript" src="static/socket.js"></script>
 </head>
 <body>
     <header>
