Remove author field from template

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
         <div id="now-playing">
             <div id="title">{{ song_info["title"] }}</div>
             <div id="info">
-                <span id="duration">{{ song_info["duration"] }}</span> / <span id="author">{{ song_info["author"] }}</span>
+                <span id="duration">{{ song_info["duration"] }}</span>
             </div>
         </div>
         <div id="playback">
