added stream url from config

--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@
         </div>
         <div id="playback">
             <audio controls>
-                <source src="http://ic7.101.ru:8000/a200">
+                <source src="{{ stream_url }}">
             </audio>
         </div>
         <div id="links">
