Integrate status web server into main app

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
     </header>
     <section>
         <div id="now-playing">
-            <div id="title">{{ song_info["title"] }}</div>
+            <div id="title">{{ song_info["title"] }} - {{ song_info["artist"] }}</div>
             <div id="info">
                 <span id="duration">{{ song_info["duration"] }}</span>
             </div>
