Hide audio html element

--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
         <p><a href="https://inbicst.ru/">https://inbicst.ru/</a></p>
     </footer>
     <div id="playback">
-        <audio controls preload="none" id="stream">
+        <audio hidden id="stream">
             <source src="{{ stream_url }}">
         </audio>
     </div>
