Write initial song progress to web page

--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,7 @@
     <section id="now-playing">
         <div id="title">{{ song_info["title"] }} - {{ song_info["artist"] }}</div>
         <div id="info">
+            <span id="progress">{{ song_progress }}</span> /
             <span id="duration">{{ song_info["duration"] }}</span>
         </div>
     </section>
