--- a/web/index.html
+++ b/web/index.html
@@ -45,6 +45,25 @@
         <input type="hidden" id="song_start" autocomplete="off" value="0">
         <input type="hidden" id="song_duration" autocomplete="off" value="{{ song_info['duration'] }}">
     </div>
-    <script>init();</script>
+<!--    <button id="unmuteButton"></button>-->
+    <script>
+        // var unmuteButton = document.getElementById("unmuteButton")
+        // var
+        // unmuteButton.addEventListener('click', function() {
+        //     video.muted = false;
+        // });
+
+        init();
+        // var body = document.getElementsByTagName("body")[0];
+        // initiated = false
+        // body.addEventListener('onmousedown', e => {
+        //     console.log("mousedown");
+        //     if (!initiated) {
+        //         initiated = true;
+        //         init();
+        //         document.getElementById("stream_source").muted = false;
+        //     }
+        // });
+    </script>
 </body>
 </html>
